# networked-poker

./: .gitignore  .travis.yml  LICENSE.md  README.md  stack.yaml
ai/: ai.cabal  package.yaml
ai/src/: Main.hs
ai/src/exe/ai-random/: Main.hs
ai/src/exe/call-any/: Main.hs
ai/src/exe/rule-based-ai/: Main.hs
ai/src/lib/: AICallAny.hs  AIFramework.hs  AIRandom.hs  AIRuleBased.hs  AITypes.hs  CoerceCard.hs  EVs.txt  HandleMessage.hs  HandleMessageAI.hs  NeuralNetwork.hs
ai/src/python-code/: handvalue.py  nn.py
client/: client.cabal  package.yaml
client-framework/: client-framework.cabal  package.yaml
client-framework/src/: ClientFramework.hs  Utilities.hs
client/src/: Main.hs  main.qml
client/src/exe/: Main.hs
client/src/gui/: Action.qml  AllChipsAndCards.qml  Board.qml  Buttons.qml  Card.qml  CardsChipsPlayer.qml  Chip.qml  Console.qml  Constants.js  GameOverWindow.qml  Main.qml  MessageModel.qml  OnePlayer.qml  OnePlayersCards.qml  Player.qml  PlayerCards.qml  PlayerCardsAndChips.qml  Players.qml  Pot.qml  RaiseWindow.qml  TableCards.qml  TwoPlayers.qml  TwoPlayersCards.qml  XCardsAndChips.qml  YCardsAndChips.qml  main.qml
client/src/lib/: CLenses.hs  ClientSetup.hs  ClientTypes.hs  ClientUtilities.hs  Constants.hs  GUISetup.hs  GUIUpdate.hs  HandleClick.hs  HandleMessage.hs  Setup.hs  Utilities.hs
client/src/lib/Utilities/: ClientTypes.hs
experiments/: LICENSE  experiments.cabal  package.yaml
experiments/src/exe/ai-shuffle-test/: Main.hs
server/: LICENSE  bettingrules.txt  package.yaml  server.cabal
server/src/: BetUtilities.hs  Betting.hs  CardUtilities.hs  Game.hs  GameUtilities.hs  HandValue.hs  Input.hs  Lenses.hs  Main.hs  Messages.hs  Output.hs  PlayerUtilities.hs  Queue.hs  RunLocal.hs  RunNetwork.hs  Showdown.hs  StateUtilities.hs  TestStates.hs  Types.hs  Utilities.hs
server/src/HandValue/: Best.hs  Sort.hs  Utilities.hs  Value.hs
server/src/Input/: Network.hs  Terminal.hs
server/src/Input/Network/: Input.hs
server/src/Input/Terminal/: Input.hs  Messages.hs
server/src/Output/Network/: Output.hs
server/src/Output/Terminal/: InputMessages.hs  Output.hs  OutputMessages.hs  OutputUtilities.hs
server/src/Showdown/: Best.hs  Ord.hs  Sort.hs  Utilities.hs  Value.hs
server/src/Utilities/: Card.hs  Player.hs  Showdown.hs
server/src/Utilities/Terminal/: Output.hs
server/src/exe/: Main.hs
server/src/exe/server/: Main.hs
server/src/exe/shuffletest/: Main.hs
server/src/gui/: CustomComboBox.qml  CustomLabel.qml  Main.qml  ShufflePicker.qml  ShuffleTester.qml
server/src/lib/: Betting.hs  DrawCard.hs  Game.hs  HumanMessage.hs  Input.hs  LaunchServer.hs  Output.hs  RandomSource.hs  Showdown.hs  TestDrawCard.hs  Types.hs
server/src/lib/Showdown/: Best.hs  Ord.hs  Value.hs
server/src/lib/Utilities/: Card.hs  Player.hs  Showdown.hs  Types.hs
server/test/: BettingTests.hs  Tests.hs
server/tests/: BettingTests.hs  CardTests.hs  PlayerTests.hs  ShowdownTests.hs  Tests.hs
types/: package.yaml  types.cabal
types/src/lib/: Lenses.hs  Types.hs
