name:                server
version:             0.1.0.0
synopsis:            A server hosting a poker game
description:         Play texas hold em' poker against other players across the internet
license:             BSD3
license-file:        LICENSE
author:              ZedPea
maintainer:          z.palmer@openmailbox.org
category:            Network
build-type:          Simple
cabal-version:       >=1.10

flag debug
  Description:         Enable local play rather than network
  Default:             True

executable server
  main-is:             Main.hs
  other-extensions:    TemplateHaskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: CPP
  build-depends: base >= 4.9 && <4.10, lens, random, transformers
  other-modules: Betting, Utilities.Card, Utilities.Player, TestStates, Types,
                 Showdown, Utilities.Showdown, Showdown.Ord, Showdown.Value, 
                 Showdown.Best, Game, Lenses, Queue

  if !flag(debug)
    build-depends: network, bytestring, aeson
    other-modules: Input.Network.Input, Output.Network.Output, RunNetwork,
                   Output.Terminal.Output, Output.Terminal.OutputMessages,
                   Utilities.Terminal.Output
                   --need to include these three output modules otherwise stack
                   --complains, can't figure out why...

  if flag(debug)
    cpp-options: -DDEBUG
    other-modules: Input.Terminal.Input,
                   Output.Terminal.InputMessages,
                   Output.Terminal.Output, Output.Terminal.OutputMessages,
                   Utilities.Terminal.Output, RunLocal
